Создание класса Crime, добавление в него полей и конструктора.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CriminalIntent">
         <activity
-            android:name=".MainActivity"
+            android:name=".CrimeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
